<resources>
    <string name="app_name">Umbrella Health</string>
    <string name="umbrella_corporation">UMBRELLA CORPORATION</string>
    <string name="umbrella">UMBRELLA</string>
    <string name="has_you_covered">hat dich abgedeckt</string>
    <string name="all_rights_reserved_by_phong_kaster">Alle Rechte vorbehalten von UMBRELLA CORPORATION</string>
    <string name="login_with_phone_number">Einloggen mit Telefonnummer</string>
    <string name="vietnam_phone_prefix">+84</string>
    <string name="get_authorization_code">Autorisierungscode anfordern</string>
    <string name="or">Oder</string>
    <string name="phone_number">Telefonnummer</string>
    <string name="phone_number_2">Telefonnummer:</string>
    <string name="my_phone_number">0399703005</string>
    <string name="umbrella_health_phone_number">0366.253.623 – 079.410.4124 (7h bis 18h)</string>
    <string name="enter_your_verification_code">Geben Sie Ihren Bestätigungs-Code ein</string>
    <string name="confirm">Bestätigen</string>
    <string name="verification_code">Verifizierungs-Schlüssel</string>
    <string name="do_not_let_phone_number_empty">Telefonnummer nicht leer lassen</string>
    <string name="only_enter_number_except_first_zero">Geben Sie nur Zahlen außer der ersten Null ein</string>
    <string name="resend_verification_code">Verfikationscode erneut senden</string>
    <string name="do_not_receive_verification_code_try_again">Bestätigungscode nicht erhalten. Versuchen Sie es nochmal!</string>
    <string name="empty_phone_number_or_verificationId">Leere Telefonnummer oder Bestätigungs-ID</string>
    <string name="verification_failed">Überprüfung fehlgeschlagen!</string>
    <string name="loading">Wird geladen</string>
    <string name="ok">OK</string>
    <string name="success">Erfolg</string>
    <string name="add_account_info_successfully">Kontoinformationen erfolgreich hinzugefügt</string>
    <string name="cancel">Stornieren</string>
    <string name="attention">Beachtung</string>
    <string name="oops_there_is_an_issue">Hoppla! Es gibt ein Problem</string>
    <string name="login_successfully">Anmeldung erfolgreich</string>
    <string name="login_failed">Anmeldung fehlgeschlagen</string>
    <string name="login_with_google_successfully">Einloggen mit google erfolgreich</string>
    <string name="check_your_internet_connection">Prüfe deine Internetverbindung</string>
    <string name="home">Trang chủ</string>
    <string name="notification">Thông báo </string>
    <string name="personality">Cá nhân</string>
    <string name="appointment">Lịch khám bệnh </string>
    <string name="are_you_sure_about_that">Bist du dir da sicher?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="what_do_you_want_to_search_today">Was möchten Sie heute suchen?</string>
    <string name="general_examination">Khám tổng quát</string>
    <string name="heart_examination">Khám tim mạch</string>
    <string name="pregnant_examination">Khám khoa sản</string>
    <string name="covid19_examination">Xét nghiệm COVID 19</string>
    <string name="medical_test_examination">Xét nghiệm y hợc</string>
    <string name="tooth_examination">Khám nha khoa</string>
    <string name="eye_examination">Khám nhãn khoa</string>
    <string name="speciality_examination">Khám chuyên khoa</string>
    <string name="popular_specialities">Chuyên khoa phổ biến</string>
    <string name="read_more">Xem thêm</string>
    <string name="musculoskeletal">Bewegungsapparat</string>
    <string name="popular_doctors">Bác sĩ nổi bật</string>
    <string name="default_doctor_name">Doktor Nguyễn Thành Phong</string>
    <string name="default_speciality">Allgemein</string>
    <string name="default_price">Preis: 1.896.000 VND</string>
    <string name="app_description">Willkommen bei Umbrella Health - Die beste Gesundheitsanwendung in Vietnam</string>
    <string name="app_short_description">Willkommen bei Umbrella Health</string>
    <string name="it_is_your_turn">Du bist dran. Sei bereit!</string>
    <string name="umbreall_health_is_running_in_background">Umbrella Health läuft im Hintergrund</string>
    <string name="doctor_information">Informationen zum Arzt</string>
    <string name="doctor_name">Arzt:</string>
    <string name="default_personal_name">Nguyễn Thành Phong</string>
    <string name="speciality_name">Spezialität:</string>
    <string name="speciality">Spezialität</string>
    <string name="default_phone_number">0366253623</string>
    <string name="working_process">Arbeitsprozess:</string>
    <string name="default_description"><![CDATA[\<p>- Hướng dẫn đặt t&ecirc;n file b&aacute;o c&aacute;o định kỳ:</p>\n\n<p>&nbsp; &nbsp; ** Lớp (m&atilde; chữ)_M&atilde; sinh vi&ecirc;n(3 số cuối)_Họ v&agrave; t&ecirc;n _BCDK1</p>\n\n<p>VD: AT_069_LuongMinhTien_BCĐK1</p>\]]></string>
    <string name="speciality_information">Fachinformationen</string>
    <string name="description">Beschreibung:</string>
    <string name="description2">Beschreibung</string>
    <string name="doctor">Arzt</string>
    <string name="all">Alles</string>
    <string name="service">Bedienung</string>
    <string name="image">Bild</string>
    <string name="title_activity_servicepage">Serviceseite Aktivität</string>
    <string name="title_home">Zuhause</string>
    <string name="title_dashboard">Armaturenbrett</string>
    <string name="title_notifications">Benachrichtigungen</string>
    <string name="service_information">Leistungsübersicht</string>
    <string name="create_booking">Buchung erstellen</string>
    <string name="booking">Buchung</string>
    <string name="default_service_name">Quantitativer Test auf SARS-CoV-2-Antikörper</string>
    <string name="free_booking_fee">Kostenlose Buchungsgebühr</string>
    <string name="bookingName">Persönlicher Name der Buchung (Pflichtfeld)</string>
    <string name="bookingName2">Persönlicher Name der Buchung</string>
    <string name="bookingPhone">Persönliches Telefon buchen (Pflichtfeld)</string>
    <string name="bookingPhone2">Persönliches Telefon buchen</string>
    <string name="patientName">Patientenname (Pflichtfeld)</string>
    <string name="patientName2">Patientenname</string>
    <string name="male">Männlich</string>
    <string name="female">Female</string>
    <string name="gender">Weiblich</string>
    <string name="patientBirthday">Geburtstag</string>
    <string name="patientAddress">Adresse</string>
    <string name="patientReason">Grund</string>
    <string name="appointmentDate">Termin Datum (Pflichtfeld)</string>
    <string name="appointmentDate2">Termin Datum</string>
    <string name="appointmentTime">Termin (Pflichtfeld)</string>
    <string name="appointmentTime2">Termin</string>
    <string name="please_fulfill_mandatory_information">Bitte füllen Sie die Angaben vollständig aus, um Zeit für Prüfungsverfahren zu sparen</string>
    <string name="note">Notiz</string>
    <string name="note_1">1. Die von Ihnen bereitgestellten Informationen werden beim Ausfüllen Ihrer Informationen als medizinische Untersuchungsunterlagen verwendet:</string>
    <string name="note_2">\t* Geben Sie den Vor- und Nachnamen an, z. B. den Anfangsbuchstaben groß schreiben: <b>Nguyen Thanh Phong</b></string>
    <string name="note_3">\t* Füllen Sie es vollständig und korrekt aus und überprüfen Sie die Informationen bitte noch einmal, bevor Sie auf Bestätigen klicken</string>
    <string name="note_4">2. Bitte beachten Sie beim Besuch der Klinik die Seuchenschutzbestimmungen (Maskentragen, Desinfizieren, Deklaration der Epidemiologie)..</string>
    <string name="note_5">Indem Sie Ihre Buchung bestätigen, stimmen Sie unseren Nutzungsbedingungen vollständig zu.</string>
    <string name="code_male">1</string>
    <string name="code_female">0</string>
    <string name="default_appointment_time">09:00</string>
    <string name="you_do_not_fill_mandatory_field_try_again">Sie haben nicht alle erforderlichen Informationen angegeben. Bitte überprüfen Sie noch einmal !</string>
    <string name="icon">SYMBOL</string>
    <string name="booking_successfully">Erfolgreiche Buchung!</string>
    <string name="if_it_is_the_first_time_you_have_exam">Wenn Sie den medizinischen Untersuchungsprozess bei Umbrella Heath nicht kennen. Klicken Sie auf die Schaltfläche unten, um die Anweisungen anzuzeigen!</string>
    <string name="how_to_exam_in_umbrella_health">Leitfaden zur ärztlichen Untersuchung in Umbrella Health</string>
    <string name="open_with_google_map">Mit Google Map öffnen</string>
    <string name="medical_examination_guide">Leitfaden für die ärztliche Untersuchung</string>
    <string name="medical_examination_procedures">Check-up-Verfahren</string>
    <string name="attention_patient">Notiz des Patienten</string>
    <string name="umbrella_health_support_call_center">Umbrella Health Support-Callcenter</string>
    <string name="note_medical">Nachfolgend finden Sie <b>Richtlinien und Verfahren</b> für Kunden, die über Umbrella Health buchen</string>
    <string name="note_medical_1">1. Sie gehen zum Le Van Thinh Hospital, <b>130 Le Van Thinh Street, Binh Trung Tay Ward, District 2, Ho Chi Minh City</b> (Klinik). Beachten Sie den Parkplatz
         \n * Motorrad: Sie können es auf dem Parkplatz des Krankenhauses abstellen
         \n * Auto: Sie können Ihren Wachmann bitten, Ihnen zu zeigen, wo Sie 150 m vom Krankenhaus entfernt parken können
         \n 2. Sie gehen zum Registrierungsschalter und <b>melden einen Termin über Umbrella Health</b> für vorrangige Unterstützung
    </string>
    <string name="note_attention_1">
        <b>Hinweis zu COVID-19</b>
         \n * Bei einem Besuch müssen die Patienten ihre Temperatur messen, sobald sie die Tür betreten
         \n * Falls Tests erforderlich sind, kümmern sich der stationäre Patient und die Angehörigen um den Patienten
    </string>
    <string name="note_attention_2">
        <b>Beachten Sie, dass Patienten zum Arztbesuch Ausweispapiere mitbringen müssen</b>
         \n * Gesundheitskarte
         \n * Lebens-/Nichtlebensversicherungskarte
         \n * Personalausweis für Erwachsene. Geburtsurkunde für Kinder
    </string>
    <string name="default_datetime">2022–11–24 10:02:43</string>
    <string name="notifications">Benachrichtigungen</string>
    <string name="mark_all_as_read">Alles als gelesen markieren</string>
    <string name="successful_action">Die Operation wurde erfolgreich durchgeführt!</string>
    <string name="at">bei</string>
    <string name="back">Der Rücken</string>
    <string name="my_birthday">01–05–2022</string>
    <string name="my_address">14 Ly Tu Trong, Ben Nghe, Bezirk 1, Ho-Chi-Minh-Stadt</string>
    <string name="default_reason">Regelmäßige Gesundheitsuntersuchung</string>
    <string name="bookingStatus">Zeitplanstatus</string>
    <string name="processing">wird bearbeitet</string>
    <string name="you_do_not_any_appointment">Bạn không có lịch hẹn khám nào sắp tới!</string>
    <string name="default_room">Bereich A, 1. Stock, Raum 102</string>
    <string name="default_position">Nummer Ihrer Prüfung: 1</string>
    <string name="remind_me">Erinnere mich</string>
    <string name="done">Erledigt</string>
    <string name="your_position">Nummer Ihrer Prüfung:</string>
    <string name="your_reason">Dein Grund:</string>
    <string name="you_will_get_notification_as_soon_as_your_turn">Sie erhalten eine Benachrichtigung, wenn Sie an der Reihe sind</string>
    <string name="default_location">Bereich A, 1. Stock, Raum 112</string>
    <string name="numericalOrder">Ordinal number of visits</string>
    <string name="appointment_information">Termininformationen</string>
    <string name="no_account_register">Nếu chưa có tài khoản, hãy <b>đăng ký</b> ngay.</string>
    <string name="login">Nếu đã có tài khoản,  <b>đăng nhập</b> ngay.</string>
    <string name="password">password</string>
    <string name="confirm_password">confirm_password</string>
</resources>